# gigshield

./: .gitignore  Anchor.toml  README.md  SUBMISSION.md  package-lock.json  package.json  tsconfig.json
app/: next.config.js  package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/demo/: page.tsx
app/src/components/: Navbar.tsx  WalletProvider.tsx
app/src/lib/: gigshield.ts  idl.ts  useGigShield.ts
programs/gig_shield/: Cargo.toml
programs/gig_shield/src/: lib.rs
tests/: gig_shield.ts
