[package]
name = "gig-shield"
version = "0.1.0"
description = "GigShield - DePIN Freelancer Insurance Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gig_shield"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
